# properties_app

./: Cargo.toml  run.sh  tailwind.config.js
frontend/: Cargo.toml  index.html  tailwind.config.js
frontend/src/: main.rs
frontend/src/components/: mod.rs  property_card.rs
server/: Cargo.toml
server/migrations/: 20220516163602_properties.sql  20220516163746_property_tags.sql  20220519113643_properties.sql  20220603082818_properties.down.sql  20220603082818_properties.up.sql  20220603082832_property_tags.down.sql  20220603082832_property_tags.up.sql
server/src/: main.rs  property.rs
