[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls", "postgres", "macros", "chrono" ] }
tokio = { version = "1.18", features = [ "full" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
axum = { version = "0.5.6", features = [ "multipart", "query" ] }
axum-extra = { version = "0.3.2", features = ["spa"] }
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "1.0.0", features = ["v4", "fast-rng"] }
tower-http = { version = "0.3.3", features = ["fs"] }
